--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-.App {
+/*.App {
   text-align: center;
-}
+}*/
+
+/*.App {
+  font-size: 1.2rem !important;
+}*/
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
