--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   font-size: 1.2rem !important;
 }*/
 
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -25,6 +32,21 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #9e9e9e;
+  font-size: 0.8rem !important;
+}
+
+.footer .logo {
+  margin: 0rem 0.4rem;
+  color: #9e9e9e !important;
+  width: 18px !important;
+  height: 18px !important;
 }
 
 .payrate-input-group {
