--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
-.App {
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-logo {
+  color: #74bb74 !important;
+  margin-right: 5px;
 }
 
 .footer {
