--- a/src/RateConfig.css
+++ b/src/RateConfig.css
@@ -28,7 +28,10 @@
 }
 
 .config-table {
-  padding: 0rem 20rem;
+    padding: 0rem 20rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media (max-width: 1260px) {
