--- a/src/RateExamples.css
+++ b/src/RateExamples.css
@@ -8,6 +8,13 @@
     font-size: 16px !important;
 }
 
+@media (max-width: 500px) {
+    .hide-xs {
+        display: none;
+    }
+}
+
+
 @media (max-width: 760px) {
     .hide-sm {
         display: none;
